--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="img/portfolio/capture.png" class="img-responsive" alt="capture">
+                        <img src="img/portfolio/cap.png" class="img-responsive" alt="cap">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -418,8 +418,8 @@
                         <div class="modal-body">
                             <h2>수행평가</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/capture.png" class="img-responsive img-centered" alt="">
-                            <p>응용프로그래밍 수행평가 시간에 만들었던 간단한 과제입니다.<a href="intro.html">링크</a></p>
+                            <img src="img/portfolio/cap.png" class="img-responsive img-centered" alt="cap">
+                            <p>응용프로그래밍 시간에 만들었던 간단한 과제이고 틱택토라는 게임입니다.<a href="practice.html">링크</a></p>
                             <ul class="list-inline item-details">
                                 <li>Client:
                                     <strong><a href="http://startbootstrap.com">Start Bootstrap</a>
@@ -455,7 +455,7 @@
                         <div class="modal-body">
                             <h2>배드민턴 동아리</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/club.png" class="img-responsive img-centered" alt="">
+                            <img src="img/portfolio/club.png" class="img-responsive img-centered" alt="club">
                             <p>지금 제가 들어가있는 배드민턴 동아리 입니다. 아직 수업을 해보지 못해서 아쉽지만 더욱 재밌는 동아리 활동이 될거같습니다.<a href="https://ko.wikipedia.org/wiki/%EB%B0%B0%EB%93%9C%EB%AF%BC%ED%84%B4">링크</a></p>
                             <ul class="list-inline item-details">
                                 <li>Client:
